--- a/client/css/gameInterface/images.css
+++ b/client/css/gameInterface/images.css
@@ -15,3 +15,11 @@
 .image-goldMill_a {
   background-image: url(../img/images/goldMill_a.png);
 }
+
+.image-road_a {
+  background-image: url(../img/images/road_a.png);
+}
+
+.image-paperFactory_a {
+  background-image: url(../img/images/paperFactory_a.png);
+}
