--- a/client/css/gameInterface/images.css
+++ b/client/css/gameInterface/images.css
@@ -23,3 +23,6 @@
 .image-paperFactory_a {
   background-image: url(../img/images/paperFactory_a.png);
 }
+.image-steelMill_a {
+  background-image: url(../img/images/steelMill_a.png);
+}
