--- a/client/css/gameInterface/ceilMenu.css
+++ b/client/css/gameInterface/ceilMenu.css
@@ -308,7 +308,7 @@
     border-radius: 20px;
 
     box-shadow: 0px 0px 5px rgba(48, 48, 48,0.1);
-    color: #b1b1b1;
+    color: #c0c0c0;
   }
   .sectorMenu_menu-card-description-button:hover{
     background-color: #D7355C;
